fix issue with scroll jumping when pressing enter in some circumstances

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -76,6 +76,7 @@
     font-family: monospace;
     text-align: inherit;
     white-space: pre;
+    overflow-anchor: none;
   }
 
   & .textarea::selection {
